last commit, still has naming convention error so I will redo app with different names

--- a/nhl/app/views/layouts/application.html.erb
+++ b/nhl/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <a href='/nhl_teams'>NHL Teams</a> | <a href='players'>Players</a>
+    <p></p>
     <%= yield %>
   </body>
 </html>
