--- a/nhl/app/views/nhl_teams/index.html.erb
+++ b/nhl/app/views/nhl_teams/index.html.erb
@@ -5,4 +5,5 @@
         <%= nhl_team.city %>
     </div>
     <a href='/nhl_teams/edit?id=<%= nhl_team.id %>'>Edit</a>
+    <a href='/nhl_teams/show?id=<%= nhl_team.id %>'>Show</a>
 <% end %>
