--- a/franchises/app/views/layouts/application.html.erb
+++ b/franchises/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <a href="/franchises">Teams</a> | <a href="/players">Players</a>
+    <p></p>
     <%= yield %>
   </body>
 </html>
